policies/templates/gcp_gke_enable_workload_identity_v1.yaml
# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Check to see if GKE stackdriver logging is enabled
# https://cloud.google.com/logging/kubernetes-engine/

apiVersion: templates.gatekeeper.sh/v1alpha1
kind: ConstraintTemplate
metadata:
  name: gcp-gke-enable-workload-identity-v1
spec:
  crd:
    spec:
      names:
        kind: GCPGKEEnableWorkloadIdentityConstraintV1
      validation:
        openAPIV3Schema:
          properties: {}
  targets:
    validation.gcp.forsetisecurity.org:
      rego: | #INLINE("validator/gke_enable_workload_identity.rego")
            #
            # Copyright 2019 Google LLC
            #
            # Licensed under the Apache License, Version 2.0 (the "License");
            # you may not use this file except in compliance with the License.
            # You may obtain a copy of the License at
            #
            #      http://www.apache.org/licenses/LICENSE-2.0
            #
            # Unless required by applicable law or agreed to in writing, software
            # distributed under the License is distributed on an "AS IS" BASIS,
            # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
            # See the License for the specific language governing permissions and
            # limitations under the License.
            #
            
            package templates.gcp.GCPGKEEnableWorkloadIdentityConstraintV1
            
            import data.validator.gcp.lib as lib
            
            deny[{
            	"msg": message,
            	"details": metadata,
            }] {
            	constraint := input.constraint
            	asset := input.asset
            	asset.asset_type == "container.googleapis.com/Cluster"
            
            	cluster := asset.resource.data
            	workload_identity_disabled(cluster)
            
            	message := sprintf("Workload identity is disabled in cluster %v.", [asset.name])
            	metadata := {"resource": asset.name}
            }
            
            ###########################
            # Rule Utilities
            ###########################
            workload_identity_disabled(cluster) {
            	workload_identity_config := lib.get_default(cluster, "workloadIdentityConfig", {})
            	not workload_identity_field_exists(workload_identity_config)
            }
            
            workload_identity_field_exists(workload_identity_config) {
            	lib.has_field(workload_identity_config, "workloadPool")
            }
            
            # The Beta version of the API uses the identityNamespace field instead
            # It won't appear in Cloud Asset Inventory data, but it will appear
            # in conversions from Terraform Validator (using the Beta provider).
            workload_identity_field_exists(workload_identity_config) {
            	lib.has_field(workload_identity_config, "identityNamespace")
            }
            #ENDINLINE
